[tool.poetry]
name = "repl_python3_udemy-course-code"
version = "0.1.0"
description = ""
authors = ["watshing625 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
